# astec-2019-published

./: .gitignore  1-fuse.py  1.5-intraregistration-GC.py  1.5-intraregistration.py  4-astec-new.py  4-astec.py  5-postcorrection.py  ASTEC-LOGBOOK.txt  README  README.md  __init__.py  checkdoublelineage.py  checklineage.py  example-ace.py  example-registration.py  glasbeyBGD.lut  identifyINRtoTIFF.py  mapping.txt  rename.py
ASTEC/: ASTEC.py  ASTECNEW.py  FUSION.py  INTRAREGISTRATION.py  MAN_CORR.py  README_Morpheme_lineage.txt  REGISTRATION.py  TIME.py  ascidians.py  commonTools.py  computebarycenters.py  lineage_test.py  morpheme_lineage.py  (+4 more)
ASTEC/CommunFunctions/cpp/vt/src/: CMakeLists.txt
ASTEC/CommunFunctions/cpp/vt/src/blockmatching/: api-applyTrsf.c  api-applyTrsfToPoints.h  api-blockmatching.c  api-createTrsf.c  api-cropImage.h  api-invTrsf.c  bal-blockmatching.c  bal-lineartrsf-tools.c  bal-point.h  bal-pyramid.c  bal-tests.c  bal-transformation-cell.c  bal-transformation-cell.h  bal-transformation-copy.c  bal-transformation-inversion.c  bal-transformation.c  bal-vtk-tools.c
ASTEC/CommunFunctions/cpp/vt/src/blockmatching/documentation/: inc-use-examples.tex  inc-user-commdline.tex
ASTEC/CommunFunctions/cpp/vt/src/blockmatching/documentation/use-examples/applyTrsf-blockmatching/: flo.mha  ref.mha  use-applyTrsf-blockmatching.bash
ASTEC/CommunFunctions/cpp/vt/src/blockmatching/documentation/use-examples/pointmatching/: use-pointmatching.bash
ASTEC/CommunFunctions/cpp/vt/src/libbasic/: chamferdistance.c  chunks.h  connexe.c  eigens.c  eigens.h  extract.h  parcelling.c  recline.c  systlin.c  topological-operations-common.c  topological-thinning.c  typedefs.h  vtmalloc.c
ASTEC/CommunFunctions/cpp/vt/src/libdavid/: CMakeLists.txt  ccparameters.c  ext-param.c  minimum.c
ASTEC/CommunFunctions/cpp/vt/src/libfilters/: CMakeLists.txt  D_graphe.cpp  D_graphe.h  build-tube3D.c  extraction_arbre.cpp  reechSlices.c  test-contours-3D.c  test-hessian.c  test-mask3D.c  test-radius.c  test-readtrsfs.c  test-tube3D.c  tube3D.c  tube3Dutil.c  vt_contours.h  vt_contoursMatlab.c  vt_geline2D.c  vt_geline3D.c  vt_isocontours.c  vt_isocontours.h  vt_link.h  vt_road.h  vt_tube2Dmatlab.h  vt_tube3D.c  vt_tube3Delf.c  vt_tubeutils.c
ASTEC/CommunFunctions/cpp/vt/src/libio/: bmp.c  inr.c  litetiff.c  litetiff.c.bak  litetiff.h  nachos.c  pnm.c
ASTEC/CommunFunctions/cpp/vt/src/libmatchingtools/: bal-transformation-averaging.c  bal-transformation-averaging.h  bal-transformation-propagation.c  bal-transformation-propagation.h  changeMultipleTrsfs.c  meanTrsfs.c  multipleTrsfs.c  trsf2xxxlab.c
ASTEC/CommunFunctions/cpp/vt/src/libmembrane/: CMakeLists.txt  TVmembrane.c  anisotropicHist.c  api-TVmembrane.c  api-TVmembrane.h  artefacts_acylYFP.c  diceMaximisation.c  directionHistogram.c  directionHistogramMaxima.c  membrane.c  mt_anisotropicHist.c  mt_anisotropicHist.h  mt_dice.c  mt_dice.h  mt_membrane3D.c  mt_mergeSegmentations.c  mt_mergeSegmentations.h  planeRegistration.c  pointCloudRegistration.c  test-TVsample.c  test-fields.c  vt_directionDistribution.h  vt_planeRegistration.h  vt_symmetryPlane.h
ASTEC/CommunFunctions/cpp/vt/src/libnoesis/: ccparameters.c  ccparameters.h  convert.c
ASTEC/CommunFunctions/cpp/vt/src/libtools/: CMakeLists.txt  associateLabels.c  fuseLabels.c  labelBorders.c  multiplyPointSetCoordinates.c  nlabels.c  nonZerosImage.c  overlapAnalysis.c  overlapInterpretation.c  overlapPruning.c  vt_bound.c  vt_bound.h  vt_tree.c  vt_tree.h
ASTEC/CommunFunctions/cpp/vt/src/libvp/: api-cellProperties.h  api-cellfilter.c  api-linearCombination.c  api-linearCombination.h  api-maskSeeds.h  bal-2DcellPropertiesTest.c  bal-3DcellPropertiesTest.c  cellfilter.c  mc-adhocFuse.c  mc-maskSeeds.c  mc-removeLine.c  surface-lindblad.h  surface-windreich.h  temporal-matching.c  test-3DcellProperties.c  vt_adhocFuse.h  vt_maskSeeds.h  vt_removeLine.h
ASTEC/CommunFunctions/cpp/vt/src/libvt/: CMakeLists.txt  vt_bytes.c  vt_bytes.h  vt_connexe.h  vt_copy.h  vt_daneucmapss.c  vt_distance.c  vt_distfield.c  vt_distfield.h  vt_eucmapsc.c  vt_histo-tools.c  vt_seuil.c  vt_slconnexe.c  vt_unix.h
ASTEC/CommunFunctions/cpp/vt/src/vt-exec/: Create.c  Logic.c  api-connexe.c  api-execTemplate.c  api-execTemplate.h  api-linearFilter.h  api-meanImages.c  api-tree.h  binary_noise.c  connexe.c  contours.c  convolution.c  copy.c  createImage.c  execTemplate.c  extImage.c  filters.c  getVoxelValue.c  histoJoint.c  histoMerge.c  histoStats.c  localFilter.c  meanImages.c  mip_project.c  morpho.c  my_ext.c  newTran.c  new_skiz.c  nyc_color.c  parcellisation.c  patchLogic.c  recfilters.c  reech3d.c  relabel.c  setVoxelValue.c  seuillage.c  skeleton.c  slow_connexe.c  splitImage.c  surface06.c  (+4 more)
src/ASTEC/CommunFunctions/cpp/vt/src/libmatchingtools/: CMakeLists.txt  bal-transformation-list-tools.c  bal-transformation-list-tools.h  changeMultipleTrsfs.c  statsMultipleTrsfs.c
src/ASTEC/CommunFunctions/cpp/vt/src/libnoesis/: CMakeLists.txt  chamfer.c  chamfer.h  convert.h
src/ASTEC/CommunFunctions/cpp/vt/src/libvp/: CMakeLists.txt  api-adhocFuse.c  api-adhocFuse.h  api-cellProperties.c  api-maskSeeds.c  bal-2DcellPropertiesTest.h  bal-3DcellPropertiesTest.h  bal-cellProperties.c  bal-cellProperties.h  mc-cellProperties.c  mc-extractMIPembryo.c  mc-linearCombination.c  surface-lindblad.c  surface-windreich.c  test-2DcellProperties.c  vt_adhocFuse.c  vt_cellfilter.h  vt_maskSeeds.c  vt_removeLine.c  vt_temporal-matching.c
src/ASTEC/CommunFunctions/cpp/vt/src/vt-exec/: Arit.c  CMakeLists.txt  Convert.c  Ctable.c  Ext.c  Ifmt.c  Tran.c  api-linearFilter.c  api-morpho.c  api-regionalext.c  api-tree.c  api-watershed.c  axeMedianOfComponents.c  bbox.c  caracterisation.c  chamfer.c  changevals.c  detrend.c  distance.c  drawShapes.c  gradient_unitaire.c  grey2color.c  histo.c  histoCopy.c  laplacien.c  linearFilter.c  melImages.c  mergeSlices.c  mescorr.c  minimum.c  normalisation.c  norme_gradient.c  nyc_evolution.c  nyc_mask.c  nyc_measure.c  regionalext.c  sbinter.c  sebfilter.c  setVoxelSize.c  skiz.c  (+6 more)
(+211 files in other folders)
